Fixes placeholder being cut off in Firefox. No need for vertical padding on fixed height input.

--- a/resources/assets/sass/components/Form.scss
+++ b/resources/assets/sass/components/Form.scss
@@ -21,7 +21,7 @@
 .Form-control {
   height:           46px;
   width:            100%;
-  padding:          13px 10px;
+  padding:          0 10px;
   border:           1px solid #ccc;
   border-radius:    4px;
   font-size:        17px;
